# agent-workflow-pack

./: .gitattributes  .gitignore  PROGRESS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
catalog/: platforms.yaml  route-policy.yaml  router-contract.yaml  runtime-entries.yaml  runtime-surfaces.yaml  runtime-units.yaml  trellis-discovery-schemas.json  trellis-task-layout.json  workflow-components.yaml
compatibility/: releases.yaml
docs/: faq.md  operations-manual.md  support-matrix.md
docs/releases/: v0.1.4-failed.md  v0.1.5-failed.md  v0.1.6-failed.md  v0.1.7-failed.md
overlays/project-policy/: discoverable-leaves.yaml
profiles/: default.yaml
release/: failed-releases.json  production-integration.json  provenance-lock.json  trust-policy.yaml
runtime-launcher/: agent-stack.sh.tmpl
schemas/core/: artifact-definition.v1.json  candidate-impact.v1.json  capability-manifest.v1.json  catalog.v1.json  desired-state-ir.v1.json  ownership-decision.v1.json  profile.v1.json  resolution-failure.v1.json  runtime-surface-registry.v1.json  runtime-unit-inventory.v1.json  runtime-vendor-lock.v1.json  saved-plan.v1.json  schema-catalog.v1.json  surface-coverage-proof.v1.json  task-findings.v1.json  task-quiescence-snapshot.v1.json  trellis-task-layout.v1.json  workflow-lock.v1.json  workspace-diagnostic.v1.json
schemas/providers/: acquisition-request.v1.json  acquisition-result.v1.json  archive-policy.v1.json  initializer-output-contract.v1.json  provenance.v1.json  provider-approval.v1.json  provider-attempts.v1.json  provider-failure.v1.json  provider-plan.v1.json  provider-release-receipt.v1.json  provider-result.v1.json
schemas/reconcile/: file-state.v1.json  lifecycle-transaction.v1.json  maintenance-marker.v1.json  ownership-observation.v1.json  staged-file.v1.json
schemas/release/: cli-diagnostic.v1.json  cli-result.v1.json  provenance-lock.v1.json  release-compatibility.v1.json  release-gate-result.v1.json  release-identity.v1.json  release-manifest.v1.json  release-trust-policy.v1.json
schemas/route/: adapter-golden-contract.v1.json  approval-verification-result.v1.json  platform-adapter-projection.v1.json  platform-adapter.v1.json  route-failure.v1.json
schemas/runtime/: approval-replay.v1.json  caller-context.v1.json  integration.v1.json  runtime-control.v1.json  task-outbox.v1.json  task-runtime-dispatch.v1.json  task-runtime-load-request.v1.json  task-transaction.v1.json  workspace-local.v1.json  workspace-migration-transaction.v1.json  workspace-registration-transaction.v1.json
src/agent_stack/: __init__.py  __main__.py
templates/control/: gitignore-block.tmpl  runtime-control.json.tmpl
tests/: __init__.py  conftest.py
tests/e2e/: artifact_support.py  scenario_probe.py  (+8 more)
tools/: __init__.py
(+270 files in other folders)
