[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "agent-workflow-pack"
version = "0.1.0"
description = "Self-contained workflow-pack runtime and control plane"
requires-python = ">=3.11,<3.15"
license = "Apache-2.0"

[project.scripts]
agent-stack = "agent_stack.__main__:main"

[dependency-groups]
dev = [
  "build>=1.2,<2",
  "hypothesis>=6.0,<7",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_stack"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "agent_stack/data/schemas"
"catalog" = "agent_stack/data/catalog"
"profiles" = "agent_stack/data/profiles"
"templates" = "agent_stack/data/templates"
"artifact-definitions" = "agent_stack/data/artifact-definitions"
"overlays" = "agent_stack/data/overlays"
"runtime-launcher" = "agent_stack/data/runtime-launcher"
"compatibility" = "agent_stack/data/compatibility"
"release/trust-policy.yaml" = "agent_stack/data/release/trust-policy.yaml"
"release/provenance-lock.json" = "agent_stack/data/release/provenance-lock.json"
"vendor/runtime-vendor-lock.json" = "agent_stack/data/vendor/runtime-vendor-lock.json"
"LICENSES" = "agent_stack/data/LICENSES"
"THIRD_PARTY_NOTICES.md" = "agent_stack/data/THIRD_PARTY_NOTICES.md"

[tool.hatch.build.targets.sdist]
include = [
  "src/agent_stack",
  "schemas",
  "catalog",
  "profiles",
  "templates",
  "artifact-definitions",
  "overlays",
  "runtime-launcher",
  "compatibility",
  "release/trust-policy.yaml",
  "release/provenance-lock.json",
  "vendor/runtime-vendor-lock.json",
  "LICENSES",
  "THIRD_PARTY_NOTICES.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["src/agent_stack/_vendor"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["^src/agent_stack/_vendor/"]
